Fixed spacing problem with the dropdown menu in the nav

--- a/styles/index-media-queries.css
+++ b/styles/index-media-queries.css
@@ -1711,7 +1711,7 @@ Text/Margin Scale:
   }
 
   #dropdown-menu {
-    top: 10.8rem;
+    top: 10.7rem;
     left: 66rem;
     padding: 2rem 1.2rem;
   }
@@ -1961,7 +1961,7 @@ Text/Margin Scale:
 
 @media only screen and (min-width: 2200px) and (max-width: 2250px) {
   #dropdown-menu {
-    top: 14.8rem;
+    top: 14.7rem;
     left: 175rem;
   }
 }
