--- a/styles/index.css
+++ b/styles/index.css
@@ -225,7 +225,7 @@ ul .hidden-links {
 #dropdown-menu {
   background-color: var(--white);
   position: absolute;
-  top: 12.5rem;
+  top: 12.3rem;
   left: 97rem;
   z-index: 5000;
   padding: 2.6rem 1.6rem;
